Added a cool new feature

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="anti-gravity">JIBRAN SHEIKH<br> <span class="gradient-text">Digital Strategist & Developer</span></h1>
-                <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">I wrangle code, tame pixels, and build comprehensive digital strategies. With 5+ years of experience, I turn chaotic ideas into polished, professional web realities.</p>
+                <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">I’m part developer, part digital architect, and full-time problem solver. For over 5 years, I’ve been turning 'what if' into 'it works.' I don't just push pixels and write code—I build digital strategies that actually move the needle.</p>
                 <div class="hero-buttons" data-aos="fade-up" data-aos-delay="400">
                     <a href="#work" class="cta-button primary">View My Work</a>
                     <a href="#contact" class="cta-button secondary">Get in Touch</a>
