--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="about" class="about-section">
         <div class="about-container">
             <div class="about-text" data-aos="fade-right">
-                <h2 class="section-title">The "IT Swiss Army Knife"</h2>
+                <h2 class="section-title">Digital Polymath & Developer</h2>
                 <p class="bio-text">
                     I’m a versatile IT professional with over five years of freelance experience. I mix strict logic with creative chaos to deliver tailored solutions. Whether it's developing engaging websites, managing social media strategies that actually get likes, or creating impactful content, I help businesses thrive in the digital landscape without the headache.
                 </p>
