Added a cool new feature

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="about-skills" data-aos="fade-left">
-                <h3 class="section-title small">My Arsenal</h3>
+                <h3 class="section-title small">My Skill Matrix</h3>
                 <div class="skills-grid">
                     <div class="skill-tag">HTML & CSS</div>
                     <div class="skill-tag">JavaScript</div>
